--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-card class="margin-top">
+<!-- <mat-card class="margin-top">
   <mat-card-title fxLayoutAlign="center">
     Welcome to Xenos
   </mat-card-title>
@@ -13,4 +13,21 @@
     </div>
     <div fxFlex></div>
   </div>
-</mat-card>
+</mat-card> -->
+
+<div class="row">
+  <div class="col-lg-12">
+    <div class="card">
+      <div class="card-header row flex-items-xs-middle">
+        <div class="col-lg-6">
+            <img src="../../../assets/banner.png" />
+        </div>
+        <div class="col-lg-6">
+          <h3> Some features of Xenos are now live.  Get ready for a taste of the next level of rental property and real estate listings </h3>
+          <button class="btn btn-outline" routerLink="/login">Login</button>
+          <button class="btn btn-outline" routerLink="/register">Register</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
