--- a/src/app/features/property/property.component.html
+++ b/src/app/features/property/property.component.html
@@ -1,9 +1,40 @@
+<a class="card clickable">
+    <div class="card-img">
+        <img src="../../../assets/43.jpg" alt="..." />
+    </div>
+    <div class="card-block">
+        <h4 class="card-title">{{property.title}}</h4>
+        <p class="card-text">
+        {{ property.locator.address }}
+        </p>
+    </div>
+</a>
 
-  <mat-card class="radius">
-    <img src="../../../assets/43.jpg" alt="property" height="250" width="250" />
+<!-- <div class="card">
+    <div class="card-img">
+        <img src="../../../assets/43.jpg" height="250" width="250">
+    </div>
+    <div class="card-block">
+        <h4 class="card-title">{{property.title}}</h4>
+        <p class="card-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, aut.
+        Nihil nemo, necessitatibus earum.
+        </p>
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">Rooms: <strong>{{property.rooms}}</strong></li>
+        <li class="list-group-item">Price: <strong>{{property.price}}</strong></li>
+        <li class="list-group-item">Lorem ipsum.</li>
+    </ul>
+    <div class="card-footer">
+        <a href="..." class="btn btn-sm btn-link">Action 1</a>
+        <a href="..." class="btn btn-sm btn-link">Action 2</a>
+    </div>
+</div> -->
+
+<!-- <img src="../../../assets/43.jpg" alt="property" height="250" width="250" />
     <br /><b>Title:</b> {{property.title}}
     <br /><b>Rooms:</b> {{property.rooms}}
     <br /><b>Rate:</b> {{property.price}}
-    <br />
-  </mat-card>
+<br /> -->
 
