--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navbar></app-navbar>
-<app-alert></app-alert>
-<router-outlet></router-outlet>
+<clr-main-container>
+    <app-navbar></app-navbar>
+
+    <div class="content-container">
+        <main class="content-area">
+            <app-alert></app-alert>
+            <router-outlet></router-outlet>
+        </main>
+    </div>
+    <!-- <div class="main-container">
+        <app-alert></app-alert>
+        <router-outlet></router-outlet>
+    </div> -->
+
+</clr-main-container>
 
