--- a/src/app/features/alert/alert.component.scss
+++ b/src/app/features/alert/alert.component.scss
@@ -1,26 +1,26 @@
 /* The alert message box */
-.alert {
-  padding: 20px;
-  background-color: #f44336; /* Red */
-  color: white;
-  font-weight: bold;
-  margin-bottom: 15px;
-  margin-top: 15px;
-}
+// .alert {
+//   padding: 20px;
+//   background-color: #f44336; /* Red */
+//   color: white;
+//   font-weight: bold;
+//   margin-bottom: 15px;
+//   margin-top: 15px;
+// }
 
-/* The close button */
-.closebtn {
-  margin-left: 15px;
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 22px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
-}
+// /* The close button */
+// .closebtn {
+//   margin-left: 15px;
+//   color: white;
+//   font-weight: bold;
+//   float: right;
+//   font-size: 22px;
+//   line-height: 20px;
+//   cursor: pointer;
+//   transition: 0.3s;
+// }
 
-/* When moving the mouse over the close button */
-.closebtn:hover {
-  color: black;
-}
+// /* When moving the mouse over the close button */
+// .closebtn:hover {
+//   color: black;
+// }
