--- a/src/app/features/propertylist/propertylist.component.html
+++ b/src/app/features/propertylist/propertylist.component.html
@@ -12,6 +12,21 @@
 
 
 
+<clr-modal [(clrModalOpen)]="openModal" [clrModalSize]="'lg'">
+    <h3 class="modal-title">{{selectedProperty?.title}}</h3>
+    <div class="modal-body">
+        <app-propertydetails *ngIf="selectedProperty" [property]="selectedProperty"></app-propertydetails>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-outline" (click)="openModal = false">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="openModal = false">Ok</button>
+    </div>
+</clr-modal>
+
+
+
+
+
 
 
 
