--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -8,12 +8,14 @@
   <div class="header-nav" [clr-nav-level]="1">
       <a routerLink="home" class="nav-link"><span class="nav-text">Home</span></a>
       <a routerLink="propertyList" class="nav-link"><span class="nav-text">Listings</span></a>
+      <a *ngIf="user && user.premium" routerLink="landlord-dashboard" class="nav-link"><span class="nav-text">Landlord Panel</span></a>
   </div>
   <div class="header-actions">
-      
-    <a class="nav-link nav-text" *ngIf="loggedIn">
-        {{user}}
+
+    <a class="nav-link nav-text" *ngIf="user">
+        {{user.username}}
     </a>
+
     <clr-dropdown >
       <button class="nav-icon" clrDropdownTrigger>
           <clr-icon shape="user"></clr-icon>
@@ -21,10 +23,11 @@
       </button>
 
       <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
-        <a *ngIf="!loggedIn" routerLink="login" clrDropdownItem>Login</a>        
-        <a *ngIf="!loggedIn" routerLink="register" clrDropdownItem>Register</a>        
-        <a *ngIf="loggedIn" routerLink="propertyEdit" clrDropdownItem>Add New Listing</a>
-        <a *ngIf="loggedIn" clrDropdownItem (click)="logout()">Log out</a> 
+        <a *ngIf="!user" routerLink="login" clrDropdownItem>Login</a>        
+        <a *ngIf="!user" routerLink="register" clrDropdownItem>Register</a>        
+        <a *ngIf="user" routerLink="propertyEdit" clrDropdownItem>Add New Listing</a>
+        <a *ngIf="user && !user.premium" routerLink="premium-signup" clrDropdownItem>Sign Up For Premium</a>
+        <a *ngIf="user" clrDropdownItem (click)="logout()">Log out</a> 
       </clr-dropdown-menu>
       
     </clr-dropdown>
