Premium and Password change updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-spinner></app-spinner>
 <clr-main-container>
     <app-navbar></app-navbar>
 
@@ -8,10 +9,6 @@
             <router-outlet></router-outlet>
         </main>
     </div>
-    <!-- <div class="main-container">
-        <app-alert></app-alert>
-        <router-outlet></router-outlet>
-    </div> -->
 
 </clr-main-container>
 
