--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -36,7 +36,7 @@
                 <button type="submit" class="btn btn-primary" style="width:50%;" [disabled]="loginForm.invalid">Login</button>
                 <button routerLink="/register" class="btn" style="width:50%">Sign Up</button>
             </div>
-            <a href="javascript://" class="signup">Forgot your password?</a>
+            <a class="signup" routerLink="/forgot-password">Forgot your password?</a>
         </div>
     </form>
 </div>
