--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -8,7 +8,7 @@
   <div class="header-nav" [clr-nav-level]="1">
       <a routerLink="home" class="nav-link"><span class="nav-text">Home</span></a>
       <a routerLink="propertyList" class="nav-link"><span class="nav-text">Listings</span></a>
-      <a *ngIf="user && user.premium" routerLink="landlord-dashboard" class="nav-link"><span class="nav-text">Landlord Panel</span></a>
+      <a *ngIf="user && user.isPremium" routerLink="landlord-dashboard" class="nav-link"><span class="nav-text">Landlord Panel</span></a>
   </div>
   <div class="header-actions">
 
@@ -26,7 +26,7 @@
         <a *ngIf="!user" routerLink="login" clrDropdownItem>Login</a>        
         <a *ngIf="!user" routerLink="register" clrDropdownItem>Register</a>        
         <a *ngIf="user" routerLink="propertyEdit" clrDropdownItem>Add New Listing</a>
-        <a *ngIf="user && !user.premium" routerLink="premium-signup" clrDropdownItem>Sign Up For Premium</a>
+        <a *ngIf="user && !user.isPremium" routerLink="premium-signup" clrDropdownItem>Sign Up For Premium</a>
         <a *ngIf="user" clrDropdownItem (click)="logout()">Log out</a> 
       </clr-dropdown-menu>
       
