--- a/src/app/features/premium/dashboard/dashboard-home/dashboard-home.component.html
+++ b/src/app/features/premium/dashboard/dashboard-home/dashboard-home.component.html
@@ -1,15 +1,82 @@
 
 <div class="row">
-    <div class="col-xs-4">
-        
-      <div class="btn-group btn-primary">
-        <button class="btn">
-            <clr-icon shape="cog"></clr-icon>
-            Settings
-        </button>
-      </div>
-        
-        
+  <div class="col-xs-4">
+      
+    <div class="btn-group btn-primary">
+      <button class="btn">
+          <clr-icon shape="cog"></clr-icon>
+          Settings
+      </button>
     </div>
+      
+      
   </div>
+</div>
+
+
+
+<div class="row">
+    <div class="col-lg-4 col-md-8 col-sm-12 col-xs-12">
+        <div class="card">
+            <div class="card-header">
+                <clr-icon shape="dollar-bill" size="36" style="margin-right: 15px"></clr-icon>Expenses
+            </div>
+            <div class="card-block">
+              <div class="card-title">
+                  Manage Your Expenses
+              </div>
+              <div class="card-text">
+                  Allows you to edit, create, and view your current expenses
+              </div>
+            </div>
+            <div class="card-footer">
+              <button class="btn btn-sm" routerLink="/landlord-dashboard/expenses">Expenses View</button>
+            </div>
+        </div>
+    </div>
+  
+  <div class="col-lg-4 col-md-8 col-sm-12 col-xs-12">
+      <div class="card">
+          <div class="card-header">
+            <clr-icon shape="user" size="36" style="margin-right: 15px"></clr-icon>Tenants
+          </div>
+          <div class="card-block">
+            <div class="card-title">
+                Manage Your Tenants
+            </div>
+            <div class="card-text">
+                Allows you to edit, create, and view your current tenants
+            </div>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-sm" routerLink="/landlord-dashboard/tenants">Tenants View</button>
+          </div>
+      </div>
+  </div>
+
+
+  <!-- Properties -->
+<div class="col-lg-4 col-md-8 col-sm-12 col-xs-12">
+  <div class="card">
+      <div class="card-header">
+        <clr-icon shape="home" size="36" style="margin-right: 15px"></clr-icon>Properties
+      </div>
+      <div class="card-block">
+        <div class="card-title">
+            Manage Your Properties
+        </div>
+        <div class="card-text">
+            Allows you to edit, create, and view your current properties
+        </div>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-sm" routerLink="/landlord-dashboard/properties">Properties View</button>
+      </div>
+  </div>
+</div>
+
+</div>
+
+
+
   
